--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .contact {
-  width: 100%;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -119,6 +119,7 @@
 #cont {
   font-size: 50px;
   text-align: center;
+  text-decoration: underline;
 }
 
 #resume {
@@ -129,7 +130,7 @@
 
 @media (max-width: 768px) and (min-width: 320px) {
   .socials .MuiButton-startIcon .MuiSvgIcon-root {
-    font-size: 35px;
+    font-size: 45px;
     color: rgb(0, 0, 0);
     padding: 30px;
   }
